Done add task/category, make config static

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -1,2 +1,26 @@
 notify.langLoaded=Language file loaded successfully
 notify.langLoadFailed=Failed to load language file
+notify.loadingData=Loading data...
+notify.loadingDataFailed=Failed to load data
+
+ui.welcome=Welcome to the CLI version of NCKU todo!
+ui.choice=Please choose an option: 
+ui.help=Help
+ui.setting=Settings
+ui.exit=Exit
+ui.add=Add Category/Task
+ui.list=List Todo Items
+ui.modify=Modify Category/Task
+ui.addCategory=Add Category
+ui.inputCategoryName=Please enter the category name: 
+ui.categoryAdded=Add Category %s Success!
+ui.categoryExists=Category %s already exists!
+ui.categoryNotFound=Category %s not found!
+
+ui.addTask=Add Task
+ui.inputTaskName=Please enter the task name: 
+ui.inputTaskCategory=Please enter the task's category: 
+ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD):
+ui.taskAdded=Add Task %s Success!
+ui.duplicateTaskOrCategory=Failed to add task \"%s\" to category \"%s\"\nDuplicate task or invalid category.
+ui.invalidChoice=Invalid choice, please try again.
