--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -1,2 +1,26 @@
 notify.langLoaded=成功载入语言档案
 notify.langLoadFailed=载入语言档案失败
+notify.loadingData=载入资料中...
+notify.loadingDataFailed=载入资料失败
+
+ui.welcome=欢迎使用 NCKU todo 的命令列版本！
+ui.choice=请选择一个选项：
+ui.help=帮助
+ui.setting=设定
+ui.exit=离开
+ui.add=新增类别/任务
+ui.list=列出待办事项
+ui.modify=修改类别/任务
+ui.addCategory=新增类别
+ui.inputCategoryName=请输入类别名称：
+ui.categoryAdded=成功新增类别 %s！
+ui.categoryExists=类别 %s 已存在！
+ui.categoryNotFound=类别 %s 不存在！
+
+ui.addTask=新增任务
+ui.inputTaskName=请输入任务名称：
+ui.inputTaskCategory=请输入任务的类别：
+ui.inputTaskDueDate=请输入任务的截止日期 (YYYY-MM-DD):
+ui.taskAdded=成功新增任务 %s！
+ui.duplicateTaskOrCategory=新增任务「%s」到类别「%s」失败\n重复的任务或无效的类别。
+ui.invalidChoice=无效的选择，请重试。
