Add getChoice, done setting, check empty Category name

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -11,11 +11,14 @@ ui.exit=Exit
 ui.add=Add Category/Task
 ui.list=List Todo Items
 ui.modify=Modify Category/Task
+ui.changeLanguage=Change Language
+
 ui.addCategory=Add Category
 ui.inputCategoryName=Please enter the category name: 
 ui.categoryAdded=Add Category %s Success!
 ui.categoryExists=Category %s already exists!
 ui.categoryNotFound=Category %s not found!
+ui.invalidCategoryName=Invalid category name, please re-enter.
 
 ui.addTask=Add Task
 ui.inputTaskName=Please enter the task name: 
@@ -23,4 +26,8 @@ ui.inputTaskCategory=Please enter the task's category:
 ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD):
 ui.taskAdded=Add Task %s Success!
 ui.duplicateTaskOrCategory=Failed to add task \"%s\" to category \"%s\"\nDuplicate task or invalid category.
+
+ui.languageChanged=Language changed to English!
+
+ui.pressEnter=Press Enter to continue...
 ui.invalidChoice=Invalid choice, please try again.
