--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -11,11 +11,14 @@ ui.exit=離開
 ui.add=新增類別/任務
 ui.list=列出待辦事項
 ui.modify=修改類別/任務
+ui.changeLanguage=更改語言
+
 ui.addCategory=新增類別
 ui.inputCategoryName=請輸入類別名稱：
 ui.categoryAdded=成功新增類別 %s ！
 ui.categoryExists=類別 %s 已存在！
 ui.categoryNotFound=類別 %s 不存在！
+ui.invalidCategoryName=無效的類別名稱，請重新輸入。
 
 ui.addTask=新增任務
 ui.inputTaskName=請輸入任務名稱：
@@ -23,4 +26,8 @@ ui.inputTaskCategory=請輸入任務的類別：
 ui.inputTaskDueDate=請輸入任務的截止日期 (YYYY-MM-DD):
 ui.taskAdded=成功新增任務 %s ！
 ui.duplicateTaskOrCategory=新增任務「%s」到類別「%s」失敗\n重複的任務或無效的類別。
+
+ui.languageChanged=語言已更改為 繁體中文!
+
+ui.pressEnter=按下 Enter 鍵繼續...
 ui.invalidChoice=無效的選擇，請重試。
