--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -11,11 +11,14 @@ ui.exit=离开
 ui.add=新增类别/任务
 ui.list=列出待办事项
 ui.modify=修改类别/任务
+ui.changeLanguage=更改语言
+
 ui.addCategory=新增类别
 ui.inputCategoryName=请输入类别名称：
 ui.categoryAdded=成功新增类别 %s！
 ui.categoryExists=类别 %s 已存在！
 ui.categoryNotFound=类别 %s 不存在！
+ui.invalidCategoryName=无效的类别名称，请重新输入。
 
 ui.addTask=新增任务
 ui.inputTaskName=请输入任务名称：
@@ -23,4 +26,8 @@ ui.inputTaskCategory=请输入任务的类别：
 ui.inputTaskDueDate=请输入任务的截止日期 (YYYY-MM-DD):
 ui.taskAdded=成功新增任务 %s！
 ui.duplicateTaskOrCategory=新增任务「%s」到类别「%s」失败\n重复的任务或无效的类别。
+
+ui.languageChanged=语言已更改为 简体中文!
+
+ui.pressEnter=按下 Enter 键继续...
 ui.invalidChoice=无效的选择，请重试。
