Done modify task/category (wait for language pack), prepare to remake Category

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -12,20 +12,34 @@ ui.add=Add Category/Task
 ui.list=List Todo Items
 ui.modify=Modify Category/Task
 ui.changeLanguage=Change Language
+ui.pickLanguage=Please select a language:
 
 ui.addCategory=Add Category
 ui.inputCategoryName=Please enter the category name: 
-ui.categoryAdded=Add Category %s Success!
-ui.categoryExists=Category %s already exists!
-ui.categoryNotFound=Category %s not found!
+ui.categoryAdded=Add Category \"%s\" Success!
+ui.categoryExists=Category \"%s\" already exists!
 ui.invalidCategoryName=Invalid category name, please re-enter.
 
 ui.addTask=Add Task
 ui.inputTaskName=Please enter the task name: 
-ui.inputTaskCategory=Please enter the task's category: 
-ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD):
-ui.taskAdded=Add Task %s Success!
+ui.pickCategoryToAdd=Please select the category to add the task to:
+ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
+ui.taskAdded=Add Task \"%s\" Success!
+ui.invalidTaskName=Invalid task name, please re-enter.
+ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
 ui.duplicateTaskOrCategory=Failed to add task \"%s\" to category \"%s\"\nDuplicate task or invalid category.
+
+ui.modifyCategory=Modify Category
+ui.pickCategoryToModify=Please select the category to modify:
+ui.noCategory=No category in the list, please add a category first!
+ui.inputNewCategoryName=Please enter the new category name: 
+ui.categoryModified=Modify Category \"%s\" to \"%s\" Success!
+ui.categoryExists=Category \"%s\" already exists!
+
+ui.modifyTask=Modify Task
+ui.pickCategoryOfTask=Please select the category of the task to modify:
+ui.noTaskInCategory=No task in the selected category, please add a task first!
+ui.pickTaskToModify=Please select the task to modify:
 
 ui.languageChanged=Language changed to English!
 
