--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -12,20 +12,34 @@ ui.add=新增类别/任务
 ui.list=列出待办事项
 ui.modify=修改类别/任务
 ui.changeLanguage=更改语言
+ui.pickLanguage=请选择语言：
 
 ui.addCategory=新增类别
 ui.inputCategoryName=请输入类别名称：
-ui.categoryAdded=成功新增类别 %s！
-ui.categoryExists=类别 %s 已存在！
-ui.categoryNotFound=类别 %s 不存在！
+ui.categoryAdded=成功新增类别「%s」！
+ui.categoryExists=类别「%s」已存在！
 ui.invalidCategoryName=无效的类别名称，请重新输入。
 
 ui.addTask=新增任务
 ui.inputTaskName=请输入任务名称：
-ui.inputTaskCategory=请输入任务的类别：
-ui.inputTaskDueDate=请输入任务的截止日期 (YYYY-MM-DD):
-ui.taskAdded=成功新增任务 %s！
+ui.pickCategoryToAdd=请选择要新增任务到哪个类别：
+ui.inputTaskDueDate=请输入任务的截止日期 (YYYY-MM-DD, 若无则留空):
+ui.taskAdded=成功新增任务「%s」！
+ui.invalidTaskName=无效的任务名称，请重新输入。
+ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
 ui.duplicateTaskOrCategory=新增任务「%s」到类别「%s」失败\n重复的任务或无效的类别。
+
+ui.modifyCategory=修改类别
+ui.pickCategoryToModify=请选择要修改的类别：
+ui.noCategory=类别列表为空，请先新增类别!
+ui.inputNewCategoryName=请输入新的类别名称：
+ui.categoryModified=成功修改类别「%s」为「%s」！
+ui.categoryExists=类别「%s」已存在！
+
+ui.modifyTask=修改任务
+ui.pickCategoryOfTask=请选择要修改任务的类别：
+ui.noTaskInCategory=类别中没有任务，请先新增任务!
+ui.pickTaskToModify=请选择要修改的任务：
 
 ui.languageChanged=语言已更改为 简体中文!
 
