--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -12,20 +12,34 @@ ui.add=新增類別/任務
 ui.list=列出待辦事項
 ui.modify=修改類別/任務
 ui.changeLanguage=更改語言
+ui.pickLanguage=請選擇語言：
 
 ui.addCategory=新增類別
 ui.inputCategoryName=請輸入類別名稱：
-ui.categoryAdded=成功新增類別 %s ！
-ui.categoryExists=類別 %s 已存在！
-ui.categoryNotFound=類別 %s 不存在！
+ui.categoryAdded=成功新增類別「%s」！
+ui.categoryExists=類別「%s」已存在！
 ui.invalidCategoryName=無效的類別名稱，請重新輸入。
 
 ui.addTask=新增任務
 ui.inputTaskName=請輸入任務名稱：
-ui.inputTaskCategory=請輸入任務的類別：
-ui.inputTaskDueDate=請輸入任務的截止日期 (YYYY-MM-DD):
-ui.taskAdded=成功新增任務 %s ！
+ui.pickCategoryToAdd=請選擇要新增任務到哪個類別：
+ui.inputTaskDueDate=請輸入任務的截止日期 (YYYY-MM-DD, 若無則留空):
+ui.taskAdded=成功新增任務「%s」！
+ui.invalidTaskName=無效的任務名稱，請重新輸入。
+ui.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
 ui.duplicateTaskOrCategory=新增任務「%s」到類別「%s」失敗\n重複的任務或無效的類別。
+
+ui.modifyCategory=修改類別
+ui.pickCategoryToModify=請選擇要修改的類別：
+ui.noCategory=類別列表為空，請先新增類別!
+ui.inputNewCategoryName=請輸入新的類別名稱：
+ui.categoryModified=成功修改類別「%s」為「%s」！
+ui.categoryExists=類別「%s」已存在！
+
+ui.modifyTask=修改任務
+ui.pickCategoryOfTask=請選擇要修改任務的類別：
+ui.noTaskInCategory=類別中沒有任務，請先新增任務!
+ui.pickTaskToModify=請選擇要修改的任務：
 
 ui.languageChanged=語言已更改為 繁體中文!
 
