Remake Category, add DataManager.java

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -27,7 +27,7 @@ ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if
 ui.taskAdded=Add Task \"%s\" Success!
 ui.invalidTaskName=Invalid task name, please re-enter.
 ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
-ui.duplicateTaskOrCategory=Failed to add task \"%s\" to category \"%s\"\nDuplicate task or invalid category.
+ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 
 ui.modifyCategory=Modify Category
 ui.pickCategoryToModify=Please select the category to modify:
@@ -40,6 +40,12 @@ ui.modifyTask=Modify Task
 ui.pickCategoryOfTask=Please select the category of the task to modify:
 ui.noTaskInCategory=No task in the selected category, please add a task first!
 ui.pickTaskToModify=Please select the task to modify:
+ui.pickNewCategory=Please select a new category (leave blank if unchanged):
+ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged):
+ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date):
+ui.pickNewStatus=Please select a new status (leave blank if unchanged):
+ui.taskModified=Modify Task \"%s\" Success!
+ui.duplicateTask=Failed to modify task \"%s\"\nDuplicate task.
 
 ui.languageChanged=Language changed to English!
 
