--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -27,7 +27,7 @@ ui.inputTaskDueDate=请输入任务的截止日期 (YYYY-MM-DD, 若无则留空)
 ui.taskAdded=成功新增任务「%s」！
 ui.invalidTaskName=无效的任务名称，请重新输入。
 ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
-ui.duplicateTaskOrCategory=新增任务「%s」到类别「%s」失败\n重复的任务或无效的类别。
+ui.duplicateTask=新增任务「%s」到类别「%s」失败\n重复的任务。
 
 ui.modifyCategory=修改类别
 ui.pickCategoryToModify=请选择要修改的类别：
@@ -40,6 +40,12 @@ ui.modifyTask=修改任务
 ui.pickCategoryOfTask=请选择要修改任务的类别：
 ui.noTaskInCategory=类别中没有任务，请先新增任务!
 ui.pickTaskToModify=请选择要修改的任务：
+ui.pickNewCategory=请选择新的类别 (未变更则留空)：
+ui.inputNewTaskName=请输入新的任务名称 (未变更则留空)：
+ui.inputNewDueDate=请输入新的截止日期 (YYYY-MM-DD, 未变更则留空, 移除日期请输入-1)：
+ui.pickNewStatus=请选择新的状态 (未变更则留空)：
+ui.taskModified=成功修改任务「%s」！
+ui.duplicateTask=修改任务「%s」失败\n重复的任务。
 
 ui.languageChanged=语言已更改为 简体中文!
 
