--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -27,7 +27,7 @@ ui.inputTaskDueDate=請輸入任務的截止日期 (YYYY-MM-DD, 若無則留空)
 ui.taskAdded=成功新增任務「%s」！
 ui.invalidTaskName=無效的任務名稱，請重新輸入。
 ui.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
-ui.duplicateTaskOrCategory=新增任務「%s」到類別「%s」失敗\n重複的任務或無效的類別。
+ui.duplicateTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
 
 ui.modifyCategory=修改類別
 ui.pickCategoryToModify=請選擇要修改的類別：
@@ -40,6 +40,12 @@ ui.modifyTask=修改任務
 ui.pickCategoryOfTask=請選擇要修改任務的類別：
 ui.noTaskInCategory=類別中沒有任務，請先新增任務!
 ui.pickTaskToModify=請選擇要修改的任務：
+ui.pickNewCategory=請選擇新的類別 (未變更則留空)：
+ui.inputNewTaskName=請輸入新的任務名稱 (未變更則留空)：
+ui.inputNewDueDate=請輸入新的截止日期 (YYYY-MM-DD, 未變更則留空, 移除日期請輸入-1)：
+ui.pickNewStatus=請選擇新的狀態 (未變更則留空)：
+ui.taskModified=成功修改任務「%s」！
+ui.duplicateTask=修改任務「%s」失敗\n重複的任務。
 
 ui.languageChanged=語言已更改為 繁體中文!
 
