Done listTasks (temporary), saveData (write file), and remove tasks.json

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -4,6 +4,7 @@ notify.loadingData=Loading data...
 notify.loadingDataFailed=Failed to load data
 
 ui.welcome=Welcome to the CLI version of NCKU todo!
+ui.hintTaskCount=You have %d incomplete tasks!\n
 ui.choice=Please choose an option: 
 ui.help=Help
 ui.setting=Settings
@@ -12,7 +13,7 @@ ui.add=Add Category/Task
 ui.list=List Todo Items
 ui.modify=Modify Category/Task
 ui.changeLanguage=Change Language
-ui.pickLanguage=Please select a language:
+ui.pickLanguage=Please select a language: 
 
 ui.addCategory=Add Category
 ui.inputCategoryName=Please enter the category name: 
@@ -22,28 +23,31 @@ ui.invalidCategoryName=Invalid category name, please re-enter.
 
 ui.addTask=Add Task
 ui.inputTaskName=Please enter the task name: 
-ui.pickCategoryToAdd=Please select the category to add the task to:
+ui.pickCategoryToAdd=Please select the category to add the task to: 
 ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
 ui.taskAdded=Add Task \"%s\" Success!
 ui.invalidTaskName=Invalid task name, please re-enter.
 ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
 ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 
+ui,due=Due on:
+ui.emptyCategory=\t<Empty>
+
 ui.modifyCategory=Modify Category
-ui.pickCategoryToModify=Please select the category to modify:
+ui.pickCategoryToModify=Please select the category to modify: 
 ui.noCategory=No category in the list, please add a category first!
 ui.inputNewCategoryName=Please enter the new category name: 
 ui.categoryModified=Modify Category \"%s\" to \"%s\" Success!
 ui.categoryExists=Category \"%s\" already exists!
 
 ui.modifyTask=Modify Task
-ui.pickCategoryOfTask=Please select the category of the task to modify:
+ui.pickCategoryOfTask=Please select the category of the task to modify: 
 ui.noTaskInCategory=No task in the selected category, please add a task first!
-ui.pickTaskToModify=Please select the task to modify:
-ui.pickNewCategory=Please select a new category (leave blank if unchanged):
-ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged):
-ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date):
-ui.pickNewStatus=Please select a new status (leave blank if unchanged):
+ui.pickTaskToModify=Please select the task to modify: 
+ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
+ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
+ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
+ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
 ui.taskModified=Modify Task \"%s\" Success!
 ui.duplicateTask=Failed to modify task \"%s\"\nDuplicate task.
 
