--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -4,6 +4,7 @@ notify.loadingData=载入资料中...
 notify.loadingDataFailed=载入资料失败
 
 ui.welcome=欢迎使用 NCKU todo 的命令列版本！
+ui.hintTaskCount=你有 %d 个未完成的任务！\n
 ui.choice=请选择一个选项：
 ui.help=帮助
 ui.setting=设定
@@ -28,6 +29,9 @@ ui.taskAdded=成功新增任务「%s」！
 ui.invalidTaskName=无效的任务名称，请重新输入。
 ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
 ui.duplicateTask=新增任务「%s」到类别「%s」失败\n重复的任务。
+
+ui.due=截止于:
+ui.emptyCategory=\t<空白>
 
 ui.modifyCategory=修改类别
 ui.pickCategoryToModify=请选择要修改的类别：
