--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -4,6 +4,7 @@ notify.loadingData=載入資料中...
 notify.loadingDataFailed=載入資料失敗
 
 ui.welcome=歡迎使用 NCKU todo 的命令列版本！
+ui.hintTaskCount=你有 %d 個未完成的任務！\n
 ui.choice=請選擇一個選項：
 ui.help=幫助
 ui.setting=設定
@@ -28,6 +29,9 @@ ui.taskAdded=成功新增任務「%s」！
 ui.invalidTaskName=無效的任務名稱，請重新輸入。
 ui.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
 ui.duplicateTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
+
+ui.due=截止於: 
+ui.emptyCategory=<空白>
 
 ui.modifyCategory=修改類別
 ui.pickCategoryToModify=請選擇要修改的類別：
