Remove unused code, add comments/some hint, add printTitle()

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -5,6 +5,7 @@ notify.loadingDataFailed=Failed to load data
 
 ui.welcome=Welcome to the CLI version of NCKU todo!
 ui.hintTaskCount=You have %d incomplete tasks!\n
+ui.back=Back to main menu
 ui.choice=Please choose an option: 
 ui.help=Help
 ui.setting=Settings
@@ -31,7 +32,9 @@ ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
 ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 
 ui,due=Due on:
-ui.emptyCategory=\t<Empty>
+ui.emptyCategory=<Empty>
+ui.helpContent=待補!
+ui.listContent2=待補!
 
 ui.modifyCategory=Modify Category
 ui.pickCategoryToModify=Please select the category to modify: 
@@ -44,6 +47,7 @@ ui.modifyTask=Modify Task
 ui.pickCategoryOfTask=Please select the category of the task to modify: 
 ui.noTaskInCategory=No task in the selected category, please add a task first!
 ui.pickTaskToModify=Please select the task to modify: 
+ui.modifyingTask=Modifying %s - %s\n
 ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
 ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
 ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
