--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -5,6 +5,7 @@ notify.loadingDataFailed=载入资料失败
 
 ui.welcome=欢迎使用 NCKU todo 的命令列版本！
 ui.hintTaskCount=你有 %d 个未完成的任务！\n
+ui.back=回到主选单
 ui.choice=请选择一个选项：
 ui.help=帮助
 ui.setting=设定
@@ -31,7 +32,9 @@ ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
 ui.duplicateTask=新增任务「%s」到类别「%s」失败\n重复的任务。
 
 ui.due=截止于:
-ui.emptyCategory=\t<空白>
+ui.emptyCategory=<空白>
+ui.helpContent=待補!
+ui.listContent2=待補!
 
 ui.modifyCategory=修改类别
 ui.pickCategoryToModify=请选择要修改的类别：
@@ -44,6 +47,7 @@ ui.modifyTask=修改任务
 ui.pickCategoryOfTask=请选择要修改任务的类别：
 ui.noTaskInCategory=类别中没有任务，请先新增任务!
 ui.pickTaskToModify=请选择要修改的任务：
+ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=请选择新的类别 (未变更则留空)：
 ui.inputNewTaskName=请输入新的任务名称 (未变更则留空)：
 ui.inputNewDueDate=请输入新的截止日期 (YYYY-MM-DD, 未变更则留空, 移除日期请输入-1)：
