--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -5,6 +5,7 @@ notify.loadingDataFailed=載入資料失敗
 
 ui.welcome=歡迎使用 NCKU todo 的命令列版本！
 ui.hintTaskCount=你有 %d 個未完成的任務！\n
+ui.back=回到主選單
 ui.choice=請選擇一個選項：
 ui.help=幫助
 ui.setting=設定
@@ -32,6 +33,8 @@ ui.duplicateTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
 
 ui.due=截止於: 
 ui.emptyCategory=<空白>
+ui.helpContent=待補!
+ui.listContent2=待補!
 
 ui.modifyCategory=修改類別
 ui.pickCategoryToModify=請選擇要修改的類別：
@@ -44,6 +47,7 @@ ui.modifyTask=修改任務
 ui.pickCategoryOfTask=請選擇要修改任務的類別：
 ui.noTaskInCategory=類別中沒有任務，請先新增任務!
 ui.pickTaskToModify=請選擇要修改的任務：
+ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=請選擇新的類別 (未變更則留空)：
 ui.inputNewTaskName=請輸入新的任務名稱 (未變更則留空)：
 ui.inputNewDueDate=請輸入新的截止日期 (YYYY-MM-DD, 未變更則留空, 移除日期請輸入-1)：
