Finish consoleUI, update Task.toString()

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -33,8 +33,11 @@ ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 
 ui,due=Due on:
 ui.emptyCategory=<Empty>
-ui.helpContent=待補!
-ui.listContent2=待補!
+ui.helpContent=This application is a Command-Line Interface (CLI) tool for managing your to-do list.
+ui.helpContent2=It allows you to organize tasks into categories, set due dates, and track their status. 
+ui.helpContent3=Features include adding, listing, modifying tasks and categories, changing the application language, and more.
+ui.credit=By Hank, NCKU at 2025
+
 
 ui.modifyCategory=Modify Category
 ui.pickCategoryToModify=Please select the category to modify: 
@@ -59,3 +62,7 @@ ui.languageChanged=Language changed to English!
 
 ui.pressEnter=Press Enter to continue...
 ui.invalidChoice=Invalid choice, please try again.
+
+status.TODO=TODO
+status.IN_PROGRESS=IN_PROGRESS
+status.DONE=DONE
