--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -33,8 +33,10 @@ ui.duplicateTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
 
 ui.due=截止於: 
 ui.emptyCategory=<空白>
-ui.helpContent=待補!
-ui.listContent2=待補!
+ui.helpContent=這是一個命令行界面的待辦事項管理工具。
+ui.helpContent2=它允許你將任務組織到類別中，設置截止日期，並跟蹤它們的狀態。
+ui.helpContent3=功能包括添加、列出、修改任務和類別，更改應用程序語言等。
+ui.credit=By Hank, NCKU at 2025
 
 ui.modifyCategory=修改類別
 ui.pickCategoryToModify=請選擇要修改的類別：
@@ -59,3 +61,7 @@ ui.languageChanged=語言已更改為 繁體中文!
 
 ui.pressEnter=按下 Enter 鍵繼續...
 ui.invalidChoice=無效的選擇，請重試。
+
+status.TODO=待辦
+status.IN_PROGRESS=進行中
+status.DONE=已完成
