--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -33,8 +33,10 @@ ui.duplicateTask=新增任务「%s」到类别「%s」失败\n重复的任务。
 
 ui.due=截止于:
 ui.emptyCategory=<空白>
-ui.helpContent=待補!
-ui.listContent2=待補!
+ui.helpContent=这是一个命令行界面的待办事项管理工具。
+ui.helpContent2=它允许你将任务组织到类别中，设置截止日期，并跟踪它们的状态。
+ui.helpContent3=功能包括添加、列出、修改任务和类别，更改应用程序语言等。
+ui.credit=By Hank, NCKU at 2025
 
 ui.modifyCategory=修改类别
 ui.pickCategoryToModify=请选择要修改的类别：
@@ -59,3 +61,7 @@ ui.languageChanged=语言已更改为 简体中文!
 
 ui.pressEnter=按下 Enter 键继续...
 ui.invalidChoice=无效的选择，请重试。
+
+status.TODO=待办
+status.IN_PROGRESS=进行中
+status.DONE=已完成
