mainView.fxml multi language support / fix some layout

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -13,6 +13,10 @@ ui.exit=Exit
 ui.add=Add Category/Task
 ui.list=List Todo Items
 ui.modify=Modify Category/Task
+ui.taskName=Task Name
+ui.taskdueDate=Due Date
+ui.taskStatus=Task Status
+
 ui.changeLanguage=Change Language
 ui.pickLanguage=Please select a language: 
 
