--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -13,6 +13,10 @@ ui.exit=离开
 ui.add=新增类别/任务
 ui.list=列出待办事项
 ui.modify=修改类别/任务
+ui.taskName=任务名称
+ui.taskdueDate=任务期限
+ui.taskStatus=任务状态
+
 ui.changeLanguage=更改语言
 ui.pickLanguage=请选择语言：
 
