--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -13,6 +13,10 @@ ui.exit=離開
 ui.add=新增類別/任務
 ui.list=列出待辦事項
 ui.modify=修改類別/任務
+ui.taskName=任務名稱
+ui.taskdueDate=任務期限
+ui.taskStatus=任務狀態
+
 ui.changeLanguage=更改語言
 ui.pickLanguage=請選擇語言：
 
