--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -21,19 +21,24 @@ ui.changeLanguage=Change Language
 ui.pickLanguage=Please select a language: 
 
 ui.addCategory=Add Category
+ui.CategoryName=Category name
 ui.inputCategoryName=Please enter the category name: 
 ui.categoryAdded=Add Category \"%s\" Success!
 ui.categoryExists=Category \"%s\" already exists!
 ui.invalidCategoryName=Invalid category name, please re-enter.
 
 ui.addTask=Add Task
+ui.TaskName=Task Name
 ui.inputTaskName=Please enter the task name: 
 ui.pickCategoryToAdd=Please select the category to add the task to: 
-ui.inputTaskDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
+ui.pickCategoryToAdd-GUI=Select the category: 
+ui.inputDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
+ui.pickDueDate=Please select the task's due date:
 ui.taskAdded=Add Task \"%s\" Success!
 ui.invalidTaskName=Invalid task name, please re-enter.
 ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
 ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
+ui.confirm=Confirm
 
 ui,due=Due on:
 ui.emptyCategory=<Empty>
@@ -44,6 +49,7 @@ ui.credit=By Hank, NCKU at 2025
 
 
 ui.modifyCategory=Modify Category
+ui.CategoryName=Category Name
 ui.pickCategoryToModify=Please select the category to modify: 
 ui.noCategory=No category in the list, please add a category first!
 ui.inputNewCategoryName=Please enter the new category name: 
