modify.fxml multi language support

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -1,3 +1,6 @@
+app.title=NCKU Todo
+app.version=1.0.0
+
 notify.langLoaded=Language file loaded successfully
 notify.langLoadFailed=Failed to load language file
 notify.loadingData=Loading data...
@@ -37,7 +40,7 @@ ui.pickDueDate=Please select the task's due date:
 ui.taskAdded=Add Task \"%s\" Success!
 ui.invalidTaskName=Invalid task name, please re-enter.
 ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
-ui.duplicateTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
+ui.duplicateNewTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 ui.confirm=Confirm
 
 ui,due=Due on:
@@ -46,7 +49,6 @@ ui.helpContent=This application is a Command-Line Interface (CLI) tool for manag
 ui.helpContent2=It allows you to organize tasks into categories, set due dates, and track their status. 
 ui.helpContent3=Features include adding, listing, modifying tasks and categories, changing the application language, and more.
 ui.credit=By Hank, NCKU at 2025
-
 
 ui.modifyCategory=Modify Category
 ui.CategoryName=Category Name
@@ -64,9 +66,12 @@ ui.modifyingTask=Modifying %s - %s\n
 ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
 ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
 ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
+ui.pickNewCategory-GUI=Select a new category:
+ui.inputNewTaskName-GUI=Enter the new task name:
+ui.inputNewDueDate-GUI=Select the new due date (enter -1 to remove date):
 ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
 ui.taskModified=Modify Task \"%s\" Success!
-ui.duplicateTask=Failed to modify task \"%s\"\nDuplicate task.
+ui.duplicateModifyTask=Failed to modify task \"%s\"\nDuplicate task.
 
 ui.languageChanged=Language changed to English!
 
