--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -1,3 +1,6 @@
+app.title=NCKU 待办事项管理工具
+app.version=1.0.0
+
 notify.langLoaded=成功载入语言档案
 notify.langLoadFailed=载入语言档案失败
 notify.loadingData=载入资料中...
@@ -37,7 +40,8 @@ ui.pickDueDate=请选择任务的截止日期：
 ui.taskAdded=成功新增任务「%s」！
 ui.invalidTaskName=无效的任务名称，请重新输入。
 ui.invalidDateFormat=无效的日期格式，请使用 YYYY-MM-DD 格式。
-ui.duplicateTask=新增任务「%s」到类别「%s」失败\n重复的任务。
+ui.duplicateNewTask=新增任务「%s」到类别「%s」失败\n重复的任务。
+ui.confirm=确认
 
 ui.due=截止于:
 ui.emptyCategory=<空白>
@@ -62,10 +66,12 @@ ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=请选择新的类别 (未变更则留空)：
 ui.inputNewTaskName=请输入新的任务名称 (未变更则留空)：
 ui.inputNewDueDate=请输入新的截止日期 (YYYY-MM-DD, 未变更则留空, 移除日期请输入-1)：
+ui.pickNewCategory-GUI=请选择新的类别：
+ui.inputNewTaskName-GUI=请输入新的任务名称：
+ui.inputNewDueDate-GUI=请选择新的截止日期 (移除日期请选择-1)：
 ui.pickNewStatus=请选择新的状态 (未变更则留空)：
 ui.taskModified=成功修改任务「%s」！
-ui.duplicateTask=修改任务「%s」失败\n重复的任务。
-ui.confirm=确认
+ui.duplicateModifyTask=修改任务「%s」失败\n重复的任务。
 
 ui.languageChanged=语言已更改为 简体中文!
 
