--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -1,3 +1,6 @@
+app.title=NCKU 待辦事項
+app.version=1.0.0
+
 notify.langLoaded=成功載入語言檔案
 notify.langLoadFailed=載入語言檔案失敗
 notify.loadingData=載入資料中...
@@ -37,7 +40,7 @@ ui.pickDueDate=請選擇任務的截止日期：
 ui.taskAdded=成功新增任務「%s」！
 ui.invalidTaskName=無效的任務名稱，請重新輸入。
 ui.invalidDateFormat=無效的日期格式，請使用 YYYY-MM-DD 格式。
-ui.duplicateTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
+ui.duplicateNewTask=新增任務「%s」到類別「%s」失敗\n重複的任務。
 ui.confirm=確認
 
 ui.due=截止於: 
@@ -63,9 +66,12 @@ ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=請選擇新的類別 (未變更則留空)：
 ui.inputNewTaskName=請輸入新的任務名稱 (未變更則留空)：
 ui.inputNewDueDate=請輸入新的截止日期 (YYYY-MM-DD, 未變更則留空, 移除日期請輸入-1)：
+ui.pickNewCategory-GUI=請選擇新的類別：
+ui.inputNewTaskName-GUI=請輸入新的任務名稱：
+ui.inputNewDueDate-GUI=請選擇新的截止日期 (移除日期請選擇-1)：
 ui.pickNewStatus=請選擇新的狀態 (未變更則留空)：
 ui.taskModified=成功修改任務「%s」！
-ui.duplicateTask=修改任務「%s」失敗\n重複的任務。
+ui.duplicateModifyTask=修改任務「%s」失敗\n重複的任務。
 
 ui.languageChanged=語言已更改為 繁體中文!
 
