新增任務屬性、更新任務狀態轉換及語言檔案，並實作類別控制器以支援任務顯示

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -78,6 +78,7 @@ ui.languageChanged=Language changed to English!
 ui.pressEnter=Press Enter to continue...
 ui.invalidChoice=Invalid choice, please try again.
 
-status.TODO=TODO
-status.IN_PROGRESS=IN_PROGRESS
-status.DONE=DONE
+status.TODO=To Do
+status.IN_PROGRESS=In Progress
+status.DONE=Done
+status.DELETED=Deleted
