Using LocalDate & LocalDateTime instead of Date / Add notification bubble on calendar

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -43,7 +43,7 @@ ui.invalidDateFormat=Invalid date format, please use YYYY-MM-DD format.
 ui.duplicateNewTask=Failed to add task \"%s\" to category \"%s\"\nDuplicate task.
 ui.confirm=Confirm
 
-ui,due=Due on:
+ui.due=Due on:
 ui.emptyCategory=<Empty>
 ui.helpContent=This application is a Command-Line Interface (CLI) tool for managing your to-do list.
 ui.helpContent2=It allows you to organize tasks into categories, set due dates, and track their status. 
