新增刪除任務與類別功能 / 更新語言檔案以支援刪除選項

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -16,6 +16,7 @@ ui.exit=Exit
 ui.add=Add Category/Task
 ui.list=List Todo Items
 ui.modify=Modify Category/Task
+ui.delete=Delete Category/Task
 ui.taskName=Task Name
 ui.taskdueDate=Due Date
 ui.taskStatus=Task Status
@@ -34,7 +35,7 @@ ui.addTask=Add Task
 ui.TaskName=Task Name
 ui.inputTaskName=Please enter the task name: 
 ui.pickCategoryToAdd=Please select the category to add the task to: 
-ui.pickCategoryToAdd-GUI=Select the category: 
+gui.pickCategoryToAdd=Select the category: 
 ui.inputDueDate=Please enter the task's due date (YYYY-MM-DD, leave blank if none):
 ui.pickDueDate=Please select the task's due date:
 ui.taskAdded=Add Task \"%s\" Success!
@@ -58,20 +59,33 @@ ui.inputNewCategoryName=Please enter the new category name:
 ui.categoryModified=Modify Category \"%s\" to \"%s\" Success!
 ui.categoryExists=Category \"%s\" already exists!
 
+ui.deleteCategory=Delete Category
+ui.pickCategoryToDelete=Please select the category to delete:
+ui.categoryNotEmpty=Category \"%s\" is not empty! Still want to delete it? (y/n):
+ui.confirmDeleteCategory=Are you sure you want to delete this category? (y/n):
+ui.cancelOperation=Cancel Operation
+ui.categoryDeleted=Category \"%s\" deleted successfully!
+
+ui.deleteTask=Delete Task
+ui.pickCategoryOfTaskToDelete=Please select the category of the task to delete:
+ui.pickTaskToDelete=Please select the task to delete:
+ui.taskDeleted=Delete Task \"%s\" Success!
+
 ui.modifyTask=Modify Task
-ui.pickCategoryOfTask=Please select the category of the task to modify: 
+ui.pickCategoryOfTaskToModify=Please select the category of the task to modify: 
 ui.noTaskInCategory=No task in the selected category, please add a task first!
 ui.pickTaskToModify=Please select the task to modify: 
 ui.modifyingTask=Modifying %s - %s\n
 ui.pickNewCategory=Please select a new category (leave blank if unchanged): 
 ui.inputNewTaskName=Please enter the new task name (leave blank if unchanged): 
 ui.inputNewDueDate=Please enter the new due date (YYYY-MM-DD, leave blank if unchanged, enter -1 to remove date): 
-ui.pickNewCategory-GUI=Select a new category:
-ui.inputNewTaskName-GUI=Enter the new task name:
-ui.inputNewDueDate-GUI=Select the new due date (enter -1 to remove date):
 ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
 ui.taskModified=Modify Task \"%s\" Success!
 ui.duplicateModifyTask=Failed to modify task \"%s\"\nDuplicate task.
+
+gui.pickNewCategory=Select a new category:
+gui.inputNewTaskName=Enter the new task name:
+gui.inputNewDueDate=Select the new due date (enter -1 to remove date):
 
 ui.languageChanged=Language changed to English!
 
