--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -16,6 +16,7 @@ ui.exit=離開
 ui.add=新增類別/任務
 ui.list=列出待辦事項
 ui.modify=修改類別/任務
+ui.delete=刪除類別/任務
 ui.taskName=任務名稱
 ui.taskdueDate=任務期限
 ui.taskStatus=任務狀態
@@ -34,7 +35,7 @@ ui.addTask=新增任務
 ui.TaskName=任務名稱
 ui.inputTaskName=請輸入任務名稱：
 ui.pickCategoryToAdd=請選擇要新增任務到哪個類別：
-ui.pickCategoryToAdd-GUI=請選擇要新增任務到哪個類別：
+gui.pickCategoryToAdd=請選擇要新增任務到哪個類別：
 ui.inputDueDate=請輸入任務的截止日期 (YYYY-MM-DD, 若無則留空)：
 ui.pickDueDate=請選擇任務的截止日期：
 ui.taskAdded=成功新增任務「%s」！
@@ -58,20 +59,34 @@ ui.inputNewCategoryName=請輸入新的類別名稱：
 ui.categoryModified=成功修改類別「%s」為「%s」！
 ui.categoryExists=類別「%s」已存在！
 
+
+ui.deleteCategory=刪除類別
+ui.pickCategoryToDelete=請選擇要刪除的類別：
+ui.categoryNotEmpty=類別「%s」不為空！仍然要刪除它嗎？ (y/n):
+ui.confirmDeleteCategory=您確定要刪除此類別嗎？ (y/n):
+ui.cancelOperation=取消操作
+ui.categoryDeleted=類別「%s」刪除成功！
+
+ui.deleteTask=刪除任務
+ui.pickCategoryOfTaskToDelete=請選擇要刪除任務的類別：
+ui.pickTaskToDelete=請選擇要刪除的任務：
+ui.taskDeleted=任務「%s」刪除成功！
+
 ui.modifyTask=修改任務
-ui.pickCategoryOfTask=請選擇要修改任務的類別：
+ui.pickCategoryOfTaskToModify=請選擇要修改任務的類別：
 ui.noTaskInCategory=類別中沒有任務，請先新增任務!
 ui.pickTaskToModify=請選擇要修改的任務：
 ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=請選擇新的類別 (未變更則留空)：
 ui.inputNewTaskName=請輸入新的任務名稱 (未變更則留空)：
 ui.inputNewDueDate=請輸入新的截止日期 (YYYY-MM-DD, 未變更則留空, 移除日期請輸入-1)：
-ui.pickNewCategory-GUI=請選擇新的類別：
-ui.inputNewTaskName-GUI=請輸入新的任務名稱：
-ui.inputNewDueDate-GUI=請選擇新的截止日期 (移除日期請選擇-1)：
 ui.pickNewStatus=請選擇新的狀態 (未變更則留空)：
 ui.taskModified=成功修改任務「%s」！
 ui.duplicateModifyTask=修改任務「%s」失敗\n重複的任務。
+
+gui.pickNewCategory=請選擇新的類別：
+gui.inputNewTaskName=請輸入新的任務名稱：
+gui.inputNewDueDate=請選擇新的截止日期 (移除日期請選擇-1)：
 
 ui.languageChanged=語言已更改為 繁體中文!
 
