--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -16,6 +16,7 @@ ui.exit=离开
 ui.add=新增类别/任务
 ui.list=列出待办事项
 ui.modify=修改类别/任务
+ui.delete=删除类别/任务
 ui.taskName=任务名称
 ui.taskdueDate=任务期限
 ui.taskStatus=任务状态
@@ -34,7 +35,7 @@ ui.addTask=新增任务
 ui.TaskName=任务名称
 ui.inputTaskName=请输入任务名称：
 ui.pickCategoryToAdd=请选择要新增任务到哪个类别：
-ui.pickCategoryToAdd-GUI=请选择要新增任务到哪个类别：
+gui.pickCategoryToAdd=请选择要新增任务到哪个类别：
 ui.inputDueDate=请输入任务的截止日期 (YYYY-MM-DD, 若无则留空)：
 ui.pickDueDate=请选择任务的截止日期：
 ui.taskAdded=成功新增任务「%s」！
@@ -58,20 +59,34 @@ ui.inputNewCategoryName=请输入新的类别名称：
 ui.categoryModified=成功修改类别「%s」为「%s」！
 ui.categoryExists=类别「%s」已存在！
 
+
+ui.deleteCategory=删除类别
+ui.pickCategoryToDelete=请选择要删除的类别：
+ui.categoryNotEmpty=类别「%s」不为空！仍然要删除它吗？ (y/n):
+ui.confirmDeleteCategory=您确定要删除此类别吗？ (y/n):
+ui.cancelOperation=取消操作
+ui.categoryDeleted=类别「%s」删除成功！
+
+ui.deleteTask=删除任务
+ui.pickCategoryOfTaskToDelete=请选择要删除任务的类别：
+ui.pickTaskToDelete=请选择要删除的任务：
+ui.taskDeleted=任务「%s」删除成功！
+
 ui.modifyTask=修改任务
-ui.pickCategoryOfTask=请选择要修改任务的类别：
+ui.pickCategoryOfTaskToModify=请选择要修改任务的类别：
 ui.noTaskInCategory=类别中没有任务，请先新增任务!
 ui.pickTaskToModify=请选择要修改的任务：
 ui.modifyingTask=正在修改 %s - %s\n
 ui.pickNewCategory=请选择新的类别 (未变更则留空)：
 ui.inputNewTaskName=请输入新的任务名称 (未变更则留空)：
 ui.inputNewDueDate=请输入新的截止日期 (YYYY-MM-DD, 未变更则留空, 移除日期请输入-1)：
-ui.pickNewCategory-GUI=请选择新的类别：
-ui.inputNewTaskName-GUI=请输入新的任务名称：
-ui.inputNewDueDate-GUI=请选择新的截止日期 (移除日期请选择-1)：
 ui.pickNewStatus=请选择新的状态 (未变更则留空)：
 ui.taskModified=成功修改任务「%s」！
 ui.duplicateModifyTask=修改任务「%s」失败\n重复的任务。
+
+gui.pickNewCategory=请选择新的类别：
+gui.inputNewTaskName=请输入新的任务名称：
+gui.inputNewDueDate=请选择新的截止日期 (移除日期请选择-1)：
 
 ui.languageChanged=语言已更改为 简体中文!
 
