Optimize the logic / Add ButtonBehavior.java /  Add feature to modify status

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -72,6 +72,7 @@ ui.inputNewDueDate-GUI=Select the new due date (enter -1 to remove date):
 ui.pickNewStatus=Please select a new status (leave blank if unchanged): 
 ui.taskModified=Modify Task \"%s\" Success!
 ui.duplicateModifyTask=Failed to modify task \"%s\"\nDuplicate task.
+gui.inputNewStatus=Select the new status:
 
 ui.languageChanged=Language changed to English!
 
