--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -72,6 +72,7 @@ ui.inputNewDueDate-GUI=请选择新的截止日期 (移除日期请选择-1)：
 ui.pickNewStatus=请选择新的状态 (未变更则留空)：
 ui.taskModified=成功修改任务「%s」！
 ui.duplicateModifyTask=修改任务「%s」失败\n重复的任务。
+gui.inputNewStatus=请选择新的状态：
 
 ui.languageChanged=语言已更改为 简体中文!
 
