--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -72,6 +72,7 @@ ui.inputNewDueDate-GUI=請選擇新的截止日期 (移除日期請選擇-1)：
 ui.pickNewStatus=請選擇新的狀態 (未變更則留空)：
 ui.taskModified=成功修改任務「%s」！
 ui.duplicateModifyTask=修改任務「%s」失敗\n重複的任務。
+gui.inputNewStatus=請選擇新的狀態：
 
 ui.languageChanged=語言已更改為 繁體中文!
 
