優化任務和類別的刪除功能，並調整相關UI元件

--- a/src/main/resources/lang/ui_en.properties
+++ b/src/main/resources/lang/ui_en.properties
@@ -1,10 +1,8 @@
 app.title=NCKU Todo
 app.version=1.0.0
 
-notify.langLoaded=Language file loaded successfully
-notify.langLoadFailed=Failed to load language file
-notify.loadingData=Loading data...
-notify.loadingDataFailed=Failed to load data
+log.langLoaded=Language file loaded successfully
+log.loadingData=Loading data...
 
 ui.welcome=Welcome to the CLI version of NCKU todo!
 ui.hintTaskCount=You have %d incomplete tasks!\n
