--- a/src/main/resources/lang/ui_zh_CN.properties
+++ b/src/main/resources/lang/ui_zh_CN.properties
@@ -1,10 +1,8 @@
 app.title=NCKU 待办事项管理工具
 app.version=1.0.0
 
-notify.langLoaded=成功载入语言档案
-notify.langLoadFailed=载入语言档案失败
-notify.loadingData=载入资料中...
-notify.loadingDataFailed=载入资料失败
+log.langLoaded=成功载入语言档案
+log.loadingData=载入资料中...
 
 ui.welcome=欢迎使用 NCKU todo 的命令列版本！
 ui.hintTaskCount=你有 %d 个未完成的任务！\n
