--- a/src/main/resources/lang/ui_zh_TW.properties
+++ b/src/main/resources/lang/ui_zh_TW.properties
@@ -1,10 +1,8 @@
 app.title=NCKU 待辦事項
 app.version=1.0.0
 
-notify.langLoaded=成功載入語言檔案
-notify.langLoadFailed=載入語言檔案失敗
-notify.loadingData=載入資料中...
-notify.loadingDataFailed=載入資料失敗
+log.langLoaded=成功載入語言檔案
+log.loadingData=載入資料中...
 
 ui.welcome=歡迎使用 NCKU todo 的命令列版本！
 ui.hintTaskCount=你有 %d 個未完成的任務！\n
